@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.zouzounia.tv" name="Zouzounia TV" version="4.0.0" provider-name="Twilight0">
+<addon id="plugin.video.zouzounia.tv" name="Zouzounia TV" version="4.1.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="plugin.video.youtube" version="6.8.10"/>
-        <import addon="script.module.tulip" version="2.8.9"/>
+        <import addon="script.module.tulip" version="2.8.17"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
     </extension>
     <extension point="xbmc.addon.metadata">
         <platform>all</platform>
-        <reuselanguageinvoker>false</reuselanguageinvoker>
+        <reuselanguageinvoker>true</reuselanguageinvoker>
         <summary lang="en_GB">Zouzounia TV addon</summary>
         <description lang="en_GB">Zouzounia TV addon</description>
         <summary lang="el_GR">Πρόσθετο Zouzounia TV</summary>
         <description lang="el_GR">Πρόσθετο Zouzounia TV</description>
         <license>GNU GPL, version 3</license>
         <website>https://www.youtube.com/channel/UCzsQf6eiWz4gIHgx0oYadXA</website>
-        <news>[B]4.0.0[/B]
+        <news>[B]4.1.0[/B]
+- Change cache method
+- Various other tweaks
+
+[B]4.0.X[/B]
 - Reworked addon code to use url dispatcher
-- Utilize Function cache instead of legacy cache.get for listings
+- Enable reuse language invoker
 
 [B]3.1.X[/B]
 - Updated youtube api key
